--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,24 @@
 {
-  "builds": [{
-    "src": "frontend/wsgi.py",
-    "use": "@vercel/python",
-    "config": { "maxLambdaSize": "15mb", "runtime": "python3.10" }
-  }],
+  "version": 2,
+  "builds": [
+    {
+      "src": "build.sh",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "staticfiles" }
+    },
+    {
+      "src": "frontend/wsgi.py",
+      "use": "@vercel/python",
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.10" }
+    }
+  ],
   "routes": [
     {
-      "src": "/static(.*)",
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
+      "src": "/(.*)",
       "dest": "frontend/wsgi.py"
     }
   ]
