--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-Django==4.2.4
-asgiref==3.7.2
-dj-database-url==2.1.0
-djangorestframework==3.14.0
-gunicorn==20.1.0
-psycopg2==2.9.7
-python-decouple==3.8
-sqlparse==0.4.4
-whitenoise==6.5.0
+Django>=4.2.4
+asgiref>=3.7.2
+dj-database-url>=2.1.0
+djangorestframework>=3.14.0
+gunicorn>=20.1.0
+psycopg2>=2.9.7
+python-decouple>=3.8
+sqlparse>=0.4.4
+whitenoise>=6.5.0
