--- a/vercel.json
+++ b/vercel.json
@@ -3,13 +3,13 @@
   "builds": [
     {
       "src": "build.sh",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "staticfiles" }
+      "use": "@vercel/python",
+      "config": { "runtime": "python3.10" }
     },
     {
       "src": "frontend/wsgi.py",
       "use": "@vercel/python",
-      "config": { "maxLambdaSize": "15mb", "runtime": "python3.10" }
+      "config": { "runtime": "python3.10" }
     }
   ],
   "routes": [
