--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,28 @@
-Django>=3.2
-pandas>=1.1.5
-numpy>=1.19.5
-scikit-learn>=0.24.2
-pillow>=8.0.1
-joblib>=1.0.0
-opencv-python>=4.5.1.48
-tensorflow>=2.4.0
-speechrecognition>=3.8.1
-PyPDF2>=1.26.0
-transformers>=4.0.0
-spacy>=3.0.0
-requests>=2.25.0
-torch>=1.7.0
-pyaudio>=0.2.11
-django-cors-headers>=3.7.0
-django-crispy-forms>=1.11.0
-django-bootstrap4>=1.1.0
-tailwindcss>=3.0.0
-gsap>=3.5.1
-vanilla-tilt>=1.7.0
-font-awesome>=5.15.2
+Django==3.2.*
+pandas==1.1.*
+numpy==1.19.*
+scikit-learn==0.24.*
+Pillow==8.0.*
+joblib==1.0.*
+opencv-python-headless==4.5.*
+tensorflow-cpu==2.4.*
+SpeechRecognition==3.8.*
+PyPDF2==1.26.*
+transformers==4.0.*
+spacy==3.0.*
+requests==2.25.*
+torch==1.7.*
+django-cors-headers==3.7.*
+django-crispy-forms==1.11.*
+django-bootstrap4==1.1.*
+loguru==0.5.*
 
-# Optional dependencies
-loguru>=0.5.3  # For advanced logging, can replace logging
+# Remove the following as they're not Python packages:
+# tailwindcss
+# gsap
+# vanilla-tilt
+# font-awesome
 
-# Notes: 
 # For spacy model:
-# After installing spacy, run the following command to install the language model:
+# You need to download this in your build process, not in requirements.txt
 # python -m spacy download en_core_web_sm
