--- a/vercel.json
+++ b/vercel.json
@@ -2,26 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "frontend/wsgi.py",
-      "use": "@vercel/python",
-      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-    },
-    {
-      "src": "build.sh",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "staticfiles"
-      }
+      "src": "Dockerfile",
+      "use": "@vercel/docker"
     }
   ],
   "routes": [
     {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
-    },
-    {
       "src": "/(.*)",
-      "dest": "frontend/wsgi.py"
+      "dest": "/$1"
     }
   ]
 }
